--- a/app/src/main/resources/templates/layout.html
+++ b/app/src/main/resources/templates/layout.html
@@ -25,18 +25,19 @@
 </body>
 
 <script type="text/javascript">
-
     document.addEventListener('DOMContentLoaded', function () {
         let datepickerFields = document.getElementsByClassName('datepicker');
 
         for (let i = 0; i < datepickerFields.length; i++) {
             seletorDeData(datepickerFields[i]);
         }
+
+        let pesoInput = document.getElementById('peso');
+
+        if(pesoInput){
+            pesoInput.addEventListener('input', pesoCadeirante());
+        }
     });
-
-    pesoCadeirante();
-
-    document.getElementById('peso').addEventListener('input', limitaCampoPeso);
 </script>
 
 </html>
