--- a/app/src/main/resources/templates/solicitacao/listagens/listaSolicitacaoHospital.html
+++ b/app/src/main/resources/templates/solicitacao/listagens/listaSolicitacaoHospital.html
@@ -47,7 +47,7 @@
                                     </a>
                                 </td>
                                 <td>
-                                    <a th:href="${'/solicitacao/excluir/' + solicitacao.id}">
+                                    <a th:href="@{/solicitacao/{id}/excluir(id=${solicitacao.id})}">
                                         <button class="button is-danger" type="submit">Excluir</button>
                                     </a>
                                 </td>
