--- a/app/src/main/resources/templates/solicitacao/dadosHospedes.html
+++ b/app/src/main/resources/templates/solicitacao/dadosHospedes.html
@@ -1,179 +1,188 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html th:replace="~{layout :: layout(~{::title}, ~{::body})}" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
     <title>Hospebem - Dados Paciente</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.css">
-    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <main>
-        <div class="card-content valign center has-text-centered">
-            <div class="columns ">
-                <ul th:object="${solicitacao}">
-                    <h2 class="title is-2">Dados Paciente</h2>
 
-                    <div class="column is-10">
-                        <div class="field is-horizontal">
-                            <div class="field-label is-normal">
-                                <label class="label">Nome </label>
-                            </div>
-                            <div class="control">
-                                <input class="validate input is-info" type="text" name="nome" th:value="${solicitacao.nome}" disabled>
-                            </div>
+<div th:include="@{/partes/cabecalhoPadrao}"/>
+<main>
+    <div class="card-content valign center has-text-centered">
+        <div class="columns ">
+            <ul th:object="${solicitacao}">
+                <h2 class="title is-2">Dados Paciente</h2>
+
+                <div class="column is-10">
+                    <div class="field is-horizontal">
+                        <div class="field-label is-normal">
+                            <label class="label">Nome </label>
+                        </div>
+                        <div class="control">
+                            <input class="validate input is-info" type="text" name="nome" th:value="${solicitacao.nome}" disabled>
                         </div>
                     </div>
+                </div>
 
-                    <div class="column is-10">
-                        <div class="field is-horizontal">
-                            <div class="field-label is-normal">
-                                <label class="label">Gênero</label>
-                            </div>
-                            <div class="control">
-                                <input class="validate input is-info" type="text" name="genero" th:value="(${solicitacao.genero == 'F'} ? 'Feminino' : 'Masculino')" disabled>
-                            </div>
+                <div class="column is-10">
+                    <div class="field is-horizontal">
+                        <div class="field-label is-normal">
+                            <label class="label">Gênero</label>
+                        </div>
+                        <div class="control">
+                            <input class="validate input is-info" type="text" name="genero" th:value="${solicitacao.genero}" disabled>
                         </div>
                     </div>
+                </div>
 
-                    <div class="column is-10">
-                        <div class="field is-horizontal">
-                            <div class="field-label is-normal">
-                                <label class="label">Status</label>
-                            </div>
-                            <div class="control">
-                                <input class="validate input is-info" type="text" name="status" th:value="${solicitacao.status}" disabled>
-                            </div>
+                <div class="column is-10">
+                    <div class="field is-horizontal">
+                        <div class="field-label is-normal">
+                            <label class="label">Status</label>
+                        </div>
+                        <div class="control">
+                            <input class="validate input is-info" type="text" name="status" th:value="${solicitacao.status}" disabled>
                         </div>
                     </div>
+                </div>
 
-                    <div class="column is-10">
-                        <div class="field is-horizontal">
-                            <div class="field-label is-normal">
-                                <label class="label">Situação</label>
-                            </div>
-                            <div class="control">
-                                <input class="validate input is-info" type="text" name="situacao" th:value="(${solicitacao.situacao == 'pre'} ? 'Pré-Transplantado' : 'Pós-Transplantado')" disabled>
-                            </div>
+                <div class="column is-10">
+                    <div class="field is-horizontal">
+                        <div class="field-label is-normal">
+                            <label class="label">Situação</label>
+                        </div>
+                        <div class="control">
+                            <input class="validate input is-info" type="text" name="situacao" th:value="${solicitacao.situacao}" disabled>
                         </div>
                     </div>
+                </div>
 
-                    <div class="column is-10">
-                        <div class="field is-horizontal">
-                            <div class="field-label is-normal">
-                                <label class="label">Data de Nascimento</label>
-                            </div>
-                            <div class="control">
-                                <input class="validate input is-info" type="text" name="dataNascimento" th:value="${solicitacao.dataNascimento.format(formata)}" disabled>
-                            </div>
+                <div class="column is-10">
+                    <div class="field is-horizontal">
+                        <div class="field-label is-normal">
+                            <label class="label">Órgão</label>
+                        </div>
+                        <div class="control">
+                            <!--<input class="validate input is-info" type="text" name="orgao" th:value="${solicitacao.orgao}" disabled>-->
                         </div>
                     </div>
+                </div>
 
-                    <div class="column is-10">
-                        <div class="field is-horizontal">
-                            <div class="field-label is-normal">
-                                <label class="label">Telefone</label>
-                            </div>
-                            <div class="control">
-                                <input class="validate input is-info" type="text" name="telefone" th:value="${solicitacao.telefone}" disabled>
-                            </div>
+                <div class="column is-10">
+                    <div class="field is-horizontal">
+                        <div class="field-label is-normal">
+                            <label class="label">Data de Nascimento</label>
+                        </div>
+                        <div class="control">
+                            <input class="validate input is-info" type="text" name="dataNascimento" th:value="${solicitacao.dataNascimento.format(formata)}" disabled>
                         </div>
                     </div>
+                </div>
 
-                    <div class="column is-10">
-                        <div class="field is-horizontal">
-                            <div class="field-label is-normal">
-                                <label class="label">Peso</label>
-                            </div>
-                            <div class="control">
-                                <input class="validate input is-info" type="text" name="peso" th:value="${solicitacao.peso}" disabled>
-                            </div>
+                <div class="column is-10">
+                    <div class="field is-horizontal">
+                        <div class="field-label is-normal">
+                            <label class="label">Telefone</label>
+                        </div>
+                        <div class="control">
+                            <input class="validate input is-info" type="text" name="telefone" th:value="${solicitacao.telefone}" disabled>
                         </div>
                     </div>
+                </div>
 
-                    <div class="column is-10">
-                        <div class="field is-horizontal">
-                            <div class="field-label is-normal">
-                                <label class="label">Data de Entrada</label>
-                            </div>
-                            <div class="control">
-                                <input class="validate input is-info" type="text" name="dataEntrada" th:value="${solicitacao.dataEntrada.format(formata)}" disabled>
-                            </div>
+                <div class="column is-10">
+                    <div class="field is-horizontal">
+                        <div class="field-label is-normal">
+                            <label class="label">Peso</label>
+                        </div>
+                        <div class="control">
+                            <input class="validate input is-info" type="text" name="peso" th:value="${solicitacao.peso}" disabled>
                         </div>
                     </div>
+                </div>
 
-                    <div class="column is-10">
-                        <div class="field is-horizontal">
-                            <div class="field-label is-normal">
-                                <label class="label">Data de Saída</label>
-                            </div>
-                            <div class="control">
-                                <input class="validate input is-info" type="text" name="dataSaida" th:value="${solicitacao.dataSaida.format(formata)}" disabled>
-                            </div>
+                <div class="column is-10">
+                    <div class="field is-horizontal">
+                        <div class="field-label is-normal">
+                            <label class="label">Data de Entrada</label>
+                        </div>
+                        <div class="control">
+                            <input class="validate input is-info" type="text" name="dataEntrada" th:value="${solicitacao.dataEntrada.format(formata)}" disabled>
                         </div>
                     </div>
+                </div>
 
-                    <h2 class="title is-2">Endereço</h2>
-
-                    <div class="column is-10">
-                        <div class="field is-horizontal">
-                            <div class="field-label is-normal">
-                                <label class="label">Rua</label>
-                            </div>
-                            <div class="control">
-                                <input class="validate input is-info" type="text" name="rua" th:value="${solicitacao.endereco.rua}" disabled>
-                            </div>
+                <div class="column is-10">
+                    <div class="field is-horizontal">
+                        <div class="field-label is-normal">
+                            <label class="label">Data de Saída (Previsão)</label>
+                        </div>
+                        <div class="control">
+                            <input class="validate input is-info" type="text" name="dataSaida" th:value="${solicitacao.dataSaida.format(formata)}" disabled>
                         </div>
                     </div>
+                </div>
 
-                    <div class="column is-10">
-                        <div class="field is-horizontal">
-                            <div class="field-label is-normal">
-                                <label class="label">Número</label>
-                            </div>
-                            <div class="control">
-                                <input class="validate input is-info" type="text" name="numero" th:value="${solicitacao.endereco.numero}" disabled>
-                            </div>
+                <h2 class="title is-2">Endereço</h2>
+
+                <div class="column is-10">
+                    <div class="field is-horizontal">
+                        <div class="field-label is-normal">
+                            <label class="label">Rua</label>
+                        </div>
+                        <div class="control">
+                            <input class="validate input is-info" type="text" name="rua" th:value="${solicitacao.endereco.rua}" disabled>
                         </div>
                     </div>
+                </div>
 
-                    <div class="column is-10">
-                        <div class="field is-horizontal">
-                            <div class="field-label is-normal">
-                                <label class="label">Cidade</label>
-                            </div>
-                            <div class="control">
-                                <input class="validate input is-info" type="text" name="cidade" th:value="${solicitacao.endereco.cidade}" disabled>
-                            </div>
+                <div class="column is-10">
+                    <div class="field is-horizontal">
+                        <div class="field-label is-normal">
+                            <label class="label">Número</label>
+                        </div>
+                        <div class="control">
+                            <input class="validate input is-info" type="text" name="numero" th:value="${solicitacao.endereco.numero}" disabled>
                         </div>
                     </div>
+                </div>
 
-                    <div class="column is-10">
-                        <div class="field is-horizontal">
-                            <div class="field-label is-normal">
-                                <label class="label">Bairro</label>
-                            </div>
-                            <div class="control">
-                                <input class="validate input is-info" type="text" name="bairro" th:value="${solicitacao.endereco.bairro}" disabled>
-                            </div>
+                <div class="column is-10">
+                    <div class="field is-horizontal">
+                        <div class="field-label is-normal">
+                            <label class="label">Cidade</label>
+                        </div>
+                        <div class="control">
+                            <input class="validate input is-info" type="text" name="cidade" th:value="${solicitacao.endereco.cidade}" disabled>
                         </div>
                     </div>
+                </div>
 
-                    <div class="column is-10">
-                        <div class="field is-horizontal">
-                            <div class="field-label is-normal">
-                                <label class="label">UF</label>
-                            </div>
-                            <div class="control">
-                                <input class="validate input is-info" type="text" name="uf" th:value="${solicitacao.endereco.uf}" disabled>
-                            </div>
+                <div class="column is-10">
+                    <div class="field is-horizontal">
+                        <div class="field-label is-normal">
+                            <label class="label">Bairro</label>
+                        </div>
+                        <div class="control">
+                            <input class="validate input is-info" type="text" name="bairro" th:value="${solicitacao.endereco.bairro}" disabled>
                         </div>
                     </div>
+                </div>
 
-                    <h2 class="title is-2">Dados Acompanhante</h2>
+                <div class="column is-10">
+                    <div class="field is-horizontal">
+                        <div class="field-label is-normal">
+                            <label class="label">UF</label>
+                        </div>
+                        <div class="control">
+                            <input class="validate input is-info" type="text" name="uf" th:value="${solicitacao.endereco.uf}" disabled>
+                        </div>
+                    </div>
+                </div>
 
-                    <div th:each="acomp, index : ${solicitacao.acompanhantes}">
+                <h2 class="title is-2">Dados Acompanhante</h2>
 
+                <div th:each="acomp, index : ${solicitacao.acompanhantes}">
+                    <ul th:if="${acomp.nome} != ''">
                         <h5 class="title is-5">Acompanhante
                             <span th:text="${index.index + 1}"></span>:
                         </h5>
@@ -191,6 +200,17 @@
                         <div class="column is-10">
                             <div class="field is-horizontal">
                                 <div class="field-label is-normal">
+                                    <label class="label">Gênero</label>
+                                </div>
+                                <div class="control">
+                                    <input class="validate input is-info" type="text" name="generoAcomp" th:value="(${acomp.genero} == 'F' ? 'Feminino' : (${acomp.genero} == 'M' ? 'Masculino') )" disabled>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="column is-10">
+                            <div class="field is-horizontal">
+                                <div class="field-label is-normal">
                                     <label class="label">Data de Nascimento</label>
                                 </div>
                                 <div class="control">
@@ -198,10 +218,12 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
-                </ul>
-            </div>
+                    </ul>
+                </div>
+            </ul>
         </div>
-    </main>
+    </div>
+</main>
 </body>
+</html>
 </html>
