--- a/app/src/main/resources/templates/layout.html
+++ b/app/src/main/resources/templates/layout.html
@@ -35,8 +35,19 @@
 
 </body>
 
-<script>
-    registraAssistente();
+<script type="text/javascript">
+    document.addEventListener('DOMContentLoaded', function () {
+        let datepickerFields = document.getElementsByClassName('datepicker');
+        for (let i = 0; i < datepickerFields.length; i++) {
+            seletorDeData(datepickerFields[i]);
+        }
+        let pesoInput = document.getElementById('peso');
+        if(pesoInput){
+            pesoInput.addEventListener('input', pesoCadeirante());
+        }
+
+        registraAssistente();
+    });
 </script>
 
 <script type="text/javascript">
