--- a/app/src/main/resources/templates/solicitacao/cadastro.html
+++ b/app/src/main/resources/templates/solicitacao/cadastro.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html th:replace="~{layout :: layout(~{::title}, ~{::body})}" xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <title>Formulario</title>
 </head>
@@ -202,8 +203,7 @@
                             </div>
                         </div>
                     </div>
-
-                    <div class="column label-acomp margin-invisible input-radio">
+                    <div class="column">
                         <div class="field">
                             <div class="control">
                                 <label>
