--- a/app/src/main/resources/templates/registrarUsuario/registrar.html
+++ b/app/src/main/resources/templates/registrarUsuario/registrar.html
@@ -8,7 +8,8 @@
 <main>
     <div class="container card-content valign center has-text-centered">
     <h1 class="title titulo-h1">Formulário de Registro do Hospebem</h1>
-    <form action="#" th:action="@{/registrar}" th:object="${formUsuario}" method="post">
+        <form action="" th:action="@{/registrar}" th:object="${formUsuario}" method="post" onsubmit="return validaRegistroAssistente(event)" id="registraAss">
+    <!--<form action="#" th:action="@{/registrar}" th:object="${formUsuario}" method="post">-->
         <div th:if="${#fields.hasAnyErrors()}">
             <p th:each="err : ${#fields.errors()}" th:text="${err}"></p>
         </div>
