<@cassia11, @marcos012>Melhora campos obrigatorios e refatora javaScript

--- a/app/src/main/resources/templates/layout.html
+++ b/app/src/main/resources/templates/layout.html
@@ -29,6 +29,8 @@
     <script src="https://unpkg.com/pikaday@1.7.0/pikaday.js"></script>
     <script src="/js/calender.js"></script>
     <script src="/js/validaCadastroSolicitacao.js"></script>
+    <script src="/js/validacaoRegistrar.js"></script>
+
 </head>
 
 <body th:replace="${content}">
