--- a/app/src/main/resources/templates/bemvindo/bemvindo.html
+++ b/app/src/main/resources/templates/bemvindo/bemvindo.html
@@ -1,25 +1,30 @@
 <!DOCTYPE html>
-<html th:replace="~{layout :: layout(~{::title}, ~{::body})}" xmlns:sec="http://www.thymeleaf.org" xmlns:th="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
+<html  xmlns:sec="http://www.thymeleaf.org" xmlns:th="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Hospebem - Inicio </title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.css">
-    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/al
-    l.js"></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
+
 
     <link rel="stylesheet" href="css/style.css">
-</head>
+
 <body>
-    <header>
-        <nav class="navbar is-mobile " role="navigation" aria-label="main navigation">
+
+
+<header>
+
+        <nav class="navbar" role="navigation" aria-label="main navigation">
             <div class="navbar-brand">
                 <a class="navbar-item" href="/">
                     <p class="titulo-nav">HospeBem</p>
                 </a>
-                <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
-                    <span aria-hidden="true"></span>
+
+                <a role="button" class="navbar-burger burger " aria-label="menu" aria-expanded="false" ata-target="navbarBasicExample" onclick="menu()">
+                    <span >                    </span>
                     <span aria-hidden="true"></span>
                     <span aria-hidden="true"></span>
                 </a>
@@ -38,24 +43,14 @@
                             <a class="navbar-item" th:href="@{/solicitacao/hospital/lista}">
                                 Lista de solicitações hospital
                             </a>
+                            <a class="navbar-item" th:href="@{/}">Inicio</a>
                         </div>
                     </div>
                 </div>
-        <div id="navbarBasicExample" class="navbar-menu">
-            <div class="navbar-start">
-                <a class="navbar-item" href="/">Inicio</a>
-                <a class="navbar-item" href="/solicitacao/hospital/lista"> Lista de Solicitações Hospital </a>
             </div>
-        </div>
-        <div class="navbar-end">
-            <div class="navbar-item">
-                <div >
-                    <span class="navbar-item "> Logado como: <strong class="has-text-light" sec:authentication= "name"></strong> </span>
-                </div>
-            </div>
-        </div>
-        </div>
-    </nav>
+        </nav>
+
+
 </header>
 <main class="espaco-linhas">
     <div class="agrupadora has-text-centered">
@@ -92,16 +87,16 @@
     </div>
 </footer>
 </body>
-<script>
-    (function() {
-        let burger = document.querySelector('.burger');
-        let nav = document.querySelector('#'+burger.dataset.target);
-
+    <script>
+    function menu() {
+        var burger = document.querySelector('.burger');
+        var nav = document.querySelector('#'+burger.dataset.target);
         burger.addEventListener('click', function(){
             burger.classList.toggle('is-active');
-            nav.classList.toggle('is-active');
+            nav.classList.toggle('is-hoverable');
+            return burger;
         });
-    })();
+    };
 </script>
 
 </html>
