--- a/app/src/main/resources/templates/registrarUsuario/registrar.html
+++ b/app/src/main/resources/templates/registrarUsuario/registrar.html
@@ -4,41 +4,43 @@
     <title>Hospebem Registrar</title>
 </head>
 <body>
-    <div th:include="@{/partes/cabecalhoPadrao}"/>
+<div th:include="@{/partes/cabecalhoPadrao}"/>
 
-    <main>
-        <div class="container card-content valign center has-text-centered">
-            <h1 class="title titulo-h1">Formulário de Registro do Hospebem</h1>
-            <form action="#" th:action="@{/registrar}" th:object="${formUsuario}" method="post">
-                <div th:if="${#fields.hasAnyErrors()}">
-                    <p th:each="err : ${#fields.errors()}" th:text="${err}"></p>
+<main>
+    <div class="container card-content valign center has-text-centered">
+        <h1 class="title titulo-h1">Formulário de Registro do Hospebem</h1>
+        <form action="#" th:action="@{/registrar}" th:object="${formUsuario}" method="post">
+            <div th:if="${#fields.hasAnyErrors()}">
+                <p th:each="err : ${#fields.errors()}" th:text="${err}"></p>
+            </div>
+
+            <div class="columns has-text-left">
+                <div class="column is-half">
+                    <label>Informe um usuário:</label>
+                    <input class="validate input is-info" th:field="*{nome}" id="first_name" type="text" name="nome">
                 </div>
+            </div>
 
-                <div class="columns has-text-left">
-                    <div class="column is-half">
-                            <label>Informe um usuário:</label>
-                            <input class="validate input is-info" th:field="*{nome}" id = "first_name" type="text" name="nome">
-                    </div>
+            <div class="columns has-text-left">
+                <div class="column is-half">
+                    <label>Informe uma senha:</label>
+                    <input class="validate input is-info" th:field="*{senha}" id="password" type="password"
+                           name="senha">
                 </div>
+            </div>
 
-                <div class="columns has-text-left">
-                    <div class = "column is-half">
-                            <label>Informe uma senha:</label>
-                            <input class="validate input is-info" th:field="*{senha}" id="password" type="password" name="senha">
-                    </div>
-                </div>
-
-                <div class="columns has-text-left">
-                    <div class = "column is-half">
+            <div class="columns has-text-left">
+                <div class="column is-half">
                     <label>Tipo:</label>
-                    <input type="radio" name="tipo" th:field="*{tipo}" value="admin"> Administrador
-                    <input type="radio" name="tipo" th:field="*{tipo}" value="assistente-hospital"> Assistente social
-                    </div>
+                    <select th:field="*{cargo}">
+                        <option th:each="cargo : ${cargos}" th:value="${cargo}" th:text="${cargo.nome}"></option>
+                    </select>
                 </div>
+            </div>
 
-                <input class="button is-medium is-info"type="submit" value="Enviar">
-            </form>
-        </div>
-    </main>
+            <input class="button is-medium is-info" type="submit" value="Enviar">
+        </form>
+    </div>
+</main>
 </body>
 </html>
