--- a/app/src/main/resources/templates/solicitacao/cadastro.html
+++ b/app/src/main/resources/templates/solicitacao/cadastro.html
@@ -28,13 +28,13 @@
                     <div class="field">
                         <div class="control">
                             <span>*Nome Completo:</span>
-                            <input class="input input-fancy" th:field="*{nome}" type="text" id="nome" required oninvalid="requiredInput(this)" oninput="requiredInput(this)">
+                            <input class="input input-fancy" th:field="*{nome}" type="text" id="nome" >
                         </div>
                     </div>
                 </div>
                 <div class="column">
                     <div class="field">
-                        <div class="control">
+                        <div class="control input-radio margin-invisible">
                             <label>
                                 <span>*</span>
                                 <input th:field="*{genero}" type="radio" value="Feminino" id="genero1">
@@ -53,7 +53,7 @@
                             <span>*Data de nascimento:</span>
                             <input id="dataNascimento" placeholder="Clique para selecionar uma data" autocomplete="off"
                                    type="text" class="input input-fancy datepicker-retroativo" th:field="*{dataNascimento}"
-                                   onkeypress="return false" required oninvalid="requiredInput(this)" oninput="requiredInput(this)">
+                                   onkeypress="return false" >
                         </div>
                     </div>
                 </div>
@@ -71,20 +71,20 @@
                     <div class="field">
                         <div class="control">
                             <span class="display-none">Informe o peso:</span>
-                            <input class="input input-fancy display-none" th:field="*{peso}" type="number" min="0" max="600" step="0.1" id="peso" value="0" required oninvalid="requiredInput(this)" oninput="requiredInput(this)">
+                            <input class="input input-fancy display-none" th:field="*{peso}" type="number" min="0" max="600" step="0.1" id="peso" value="0" >
                         </div>
                     </div>
                 </div>
                 <div class="column">
                     <div class="field">
-                        <div class="control">
+                        <div class="control input-radio situacao margin-invisible">
                             <span>*Situação do Hóspede:</span>
                             <label>
-                                <input th:field="*{situacao}" type="radio" value="pre-transplante" id="situacao.pre" required oninvalid="this.setCustomValidity('Preencha esse campo')">
+                                <input th:field="*{situacao}" type="radio" value="pre-transplante" id="situacao.pre" >
                                 <span>Pré-transplante</span>
                             </label>
                             <label>
-                                <input th:field="*{situacao}" type="radio" value="pos-transplante" id="situacao.pos" required oninvalid="this.setCustomValidity('Preencha esse campo')">
+                                <input th:field="*{situacao}" type="radio" value="pos-transplante" id="situacao.pos" >
                                 <span>Pós-transplante</span>
                             </label>
                         </div>
@@ -101,12 +101,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="column">
+                    <div class="column input-radio orgao margin-invisible">
                         <p>*Órgão:</p>
                         <div class = "control">
                             <div class="select">
-                                <select name="orgao">
-                                    <option disabled selected>Selecione o órgão</option>
+                                <select name="orgao" id="select">
+                                    <option disabled selected value="selecione">Selecione o órgão</option>
                                     <option th:value="'coracao'" th:text="Coração"></option>
                                     <option th:value="'figado'" th:text="Fígado"></option>
                                     <option th:value="'medula'" th:text="Medula"></option>
@@ -125,7 +125,7 @@
                             <span>*Data de entrada requerida:</span>
                             <input id="dataEntrada" placeholder="Clique para selecionar uma data" autocomplete="off"
                                    type="text" class="input input-fancy datepicker-futuro" th:field="*{dataEntrada}"
-                                   onkeypress="return false;" required oninvalid="requiredInput(this)" oninput="requiredInput(this)">
+                                   onkeypress="return false;" >
                         </div>
                     </div>
                 </div>
@@ -205,7 +205,7 @@
                         </div>
                     </div>
 
-                    <div class="column">
+                    <div class="column label-acomp margin-invisible input-radio">
                         <div class="field">
                             <div class="control">
                                 <label>
