<@marcos012, @julianemartins> refatora validações do registrar

--- a/app/src/main/resources/templates/registrarUsuario/registrar.html
+++ b/app/src/main/resources/templates/registrarUsuario/registrar.html
@@ -32,7 +32,7 @@
                 <div class="columns has-text-left">
                     <div class="column is-half">
                         <div class="control">
-                            <span id="emailAssistente" class="">*Informe o E-mail da Assistente Social:</span>
+                            <span id="emailAssistente">*Informe o E-mail da Assistente Social:</span>
                             <input class="input input-fancy " th:field="*{email}" type="text" id="emailAss">
                         </div>
                     </div>
@@ -40,7 +40,7 @@
                 <div class="columns has-text-left">
                     <div class="column is-half">
                         <div class="control">
-                            <span id="hospitalReferencia" class="">*Informe o hospital de Referência da Assistente Social:</span>
+                            <span id="hospitalReferencia">*Informe o hospital de Referência da Assistente Social:</span>
                             <input class="input input-fancy " th:field="*{hospitalReferencia}" type="text" id="hospReferencia">
                         </div>
                     </div>
@@ -48,7 +48,7 @@
                 <div class="columns has-text-left">
                     <div class="column is-half">
                         <div class="control">
-                            <span id="telefoneAss" class="">*Informe o Telefone da Assistente Social:</span>
+                            <span id="telefoneAss">*Informe o Telefone da Assistente Social:</span>
                             <input class="input input-fancy " th:field="*{telefone}" type="text" id="teleAssistente">
                         </div>
                     </div>
@@ -61,7 +61,7 @@
             </div>
         </div>
         <div class="columns has-text-left">
-            <div class = "column is-half">
+            <div class="column is-half">
                     <label>Informe uma senha:</label>
                     <input class="input input-fancy" th:field="*{senha}" id="password" type="password" name="senha">
             </div>
