--- a/app/src/main/resources/templates/solicitacao/cadastro.html
+++ b/app/src/main/resources/templates/solicitacao/cadastro.html
@@ -100,7 +100,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="column input-radio orgao margin-invisible">
+                    <div class="column">
                         <p>*Órgão:</p>
                         <div class = "control">
                             <div class="select">
@@ -156,6 +156,7 @@
                         </div>
                     </div>
                 </div>
+
                 <div class="column">
                     <div class="field">
                         <div class="control">
@@ -188,6 +189,7 @@
                         </div>
                     </div>
                 </div>
+
                 <div class="column">
                     <h4 class="title subtitle is-3">Dados do Acompanhante</h4>
                     <h5 class="subtitle is-6 campo-obrigatorio">(Os campos do acompanhante 1 são obrigatórios)</h5>
@@ -217,7 +219,6 @@
                             </div>
                         </div>
                     </div>
-
                     <div class="column">
                         <div class="field">
                             <div class="control">
@@ -230,7 +231,6 @@
                         </div>
                     </div>
                 </div>
-
                 <div class="column">
                     <div class="field">
                         <div class="control">
@@ -245,4 +245,22 @@
     </div>
 </main>
 </body>
+
+<script type="text/javascript">
+
+    document.addEventListener('DOMContentLoaded', function () {
+        var datepickerFields = document.getElementsByClassName('datepicker');
+
+        for (var i = 0; i < datepickerFields.length; i++) {
+            seletorDeData(datepickerFields[i]);
+        }
+    })
+
+    pesoCadeirante();
+
+    document.getElementById('peso').addEventListener('input', limitaCampoPeso);
+
+
+</script>
+
 </html>
