<@eduarda96, @ingridDuarte>Atuliza com a master e arruma rota editar

--- a/app/src/main/resources/templates/solicitacao/listagens/listaGerenciamentoHospede.html
+++ b/app/src/main/resources/templates/solicitacao/listagens/listaGerenciamentoHospede.html
@@ -21,7 +21,7 @@
                             </tr>
                             <tr th:each="solicitacao : ${solicitacoesAceitas}">
                                 <td>
-                                    <a href="/login" class="has-text-centered" th:text="${solicitacao.nome}"></a>
+                                    <a th:href="@{/solicitacao/{id}/editar(id=${solicitacao.id})}" class="has-text-centered" th:text="${solicitacao.nome}" ></a>
                                 </td>
                             </tr>
                         </table>
