--- a/app/src/main/resources/templates/inicio.html
+++ b/app/src/main/resources/templates/inicio.html
@@ -4,7 +4,7 @@
     <title>Aceleradora Ágil</title>
 </head>
 <body>
-    <div th:insert="~{/partes/cabecalhoPadrao}"/>
+    <div th:include="@{./partes/cabecalhoPadrao}"/>
     <br>
     <div class="agrupadora">
         <nav class="navegacao">
