<@marcos012, @julianemartins> altera caminho do cabeçalho

--- a/app/src/main/resources/templates/login/login.html
+++ b/app/src/main/resources/templates/login/login.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-    <div th:include="@{/partes/cabecalhoPadrao}"/>
+    <div th:include="@{./partes/cabecalhoPadrao}"/>
 
     <main>
         <div class="container card-content valign center has-text-centered">
