--- a/app/src/main/resources/templates/registrarUsuario/registrar.html
+++ b/app/src/main/resources/templates/registrarUsuario/registrar.html
@@ -4,7 +4,7 @@
     <title>Hospebem Registrar</title>
 </head>
 <body>
-<div th:include="@{/partes/cabecalhoPadrao}"/>
+<div th:include="@{./partes/cabecalhoPadrao}"/>
 <main>
     <div class="container card-content valign center has-text-centered">
         <h1 class="title titulo-h1">Formulário de Registro do Hospebem</h1>
