--- a/app/src/main/resources/templates/solicitacao/cadastro.html
+++ b/app/src/main/resources/templates/solicitacao/cadastro.html
@@ -7,7 +7,7 @@
 
 <body>
 
-<div th:include="@{/partes/cabecalhoPadrao}"/>
+<div th:include="@{./partes/cabecalhoPadrao}"/>
 
 <main>
     <div class="container">
