--- a/app/src/main/resources/templates/solicitacao/dadosHospedes.html
+++ b/app/src/main/resources/templates/solicitacao/dadosHospedes.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<div th:include="@{/partes/cabecalhoPadrao}"/>
+<div th:include="@{./partes/cabecalhoPadrao}"/>
 <main>
     <div class="card-content valign center has-text-centered">
         <div class="columns ">
