--- a/app/src/main/resources/templates/solicitacao/listagens/listaSolicitacaoCasa.html
+++ b/app/src/main/resources/templates/solicitacao/listagens/listaSolicitacaoCasa.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-<div th:include="@{/partes/cabecalhoPadrao}"/>
+<div th:include="@{./partes/cabecalhoPadrao}"/>
 
 <header>
     <nav class="navbar is-fixed-top is-info has-text-centered nav-style" aria-label="main navigation">
