--- a/app/src/main/resources/templates/solicitacao/listagens/listaSolicitacaoHospital.html
+++ b/app/src/main/resources/templates/solicitacao/listagens/listaSolicitacaoHospital.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <div th:include="@{/partes/cabecalhoPadrao}"/>
+    <div th:include="@{./partes/cabecalhoPadrao}"/>
 
     <main>
         <div class="container">
