--- a/app/src/main/resources/templates/solicitacao/listagens/listaGerenciamentoHospede.html
+++ b/app/src/main/resources/templates/solicitacao/listagens/listaGerenciamentoHospede.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-    <div th:include="@{/partes/cabecalhoPadrao}"/>
+    <div th:include="@{./partes/cabecalhoPadrao}"/>
 
     <main>
         <div class="container">
